# mdbook-d2

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml  coverage.yml  pr-name.yml  release.yml  upload-artefacts.yml
example/: .gitignore  README.md  book.toml
example/src/: .gitignore  SUMMARY.md  chapter1.md  chapter_1.md
example/src/subsection/: README.md  chapter_2.md
src/: backend.rs  config.rs  lib.rs  main.rs
tests/: render.rs
tests/common/: mod.rs
tests/test_book/: book.toml
