[package]
name = "mdbook-d2"
description = "D2 diagram generator plugin for MdBook"
version = "0.3.8"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["mdbook", "d2", "markdown", "commonmark"]
categories = ["command-line-utilities", "text-processing", "visualization"]
repository = "https://github.com/danieleades/mdbook-d2"
rust-version = "1.88.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"

pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22.0.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"
mdbook-preprocessor = "0.5.2"

[dev-dependencies]
mdbook-driver = "0.5.2"
tempfile = "3.25.0"
test-case = "3.1.0"
toml = "0.9.11"
